# logai

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  MAINTAINERS.md  Makefile  PRODUCTION_READINESS.md  README.md  SECURITY.md  codecov.yml  install.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/releases/: RELEASE_NOTES_v0.2.0.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: API.md  ARCHITECTURE.md  COMPATIBILITY.md  DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  MCP_INTEGRATION.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ANALYSIS.md  QUICKSTART.md  QUICK_START.md  REFACTORING_PLAN.md  RELEASE.md  USAGE.md
examples/: README.md  config.toml  mcp-config.toml  test_mcp.rs
hooks/: README.md  commit-msg  install.sh  pre-commit
scripts/: README.md
scripts/homebrew/: README.md  logai.rb
src/: lib.rs  logging.rs  main.rs
src/ai/: cache.rs  claude.rs  config.rs  gemini.rs  json_extractor.rs  mcp_helper.rs  mod.rs  ollama.rs  openai.rs  parallel.rs  progress.rs  prompts.rs  provider.rs  retry.rs  statistics.rs
src/ai/providers/: bedrock.rs  claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/analyzer/: grouper.rs  mod.rs
src/cli/: mod.rs
src/commands/: clean.rs  config.rs  investigate.rs  mod.rs
src/mcp/: client.rs  config.rs  error.rs  mod.rs  protocol.rs  transport.rs
src/output/: html.rs  mod.rs  terminal.rs
src/parser/: apache.rs  config.rs  detector.rs  encoding.rs  json.rs  metadata.rs  mod.rs  nginx.rs  parallel.rs  plain.rs  stack_trace.rs  statistics.rs  syslog.rs  timestamp.rs
src/parser/formats/: apache.rs  json.rs  mod.rs  nginx.rs  plain.rs  (+1 more)
src/search/: mod.rs
src/storage/: mod.rs
tests/: ai_config_test.rs  ai_providers_comprehensive_test.rs  ai_providers_test.rs  analyzer_mod_test.rs  bedrock_integration_test.rs  cache_test.rs  clean_command_advanced_test.rs  clean_command_test.rs  commands_test.rs  integration_test.rs  investigate_command_test.rs  logging_test.rs  mcp_integration_test.rs  output_test.rs  parallel_analysis_test.rs  parser_config_test.rs  parser_mod_test.rs
tests/common/: assertions.rs  fixtures.rs  mocks.rs
