[package]
name = "sherlog"
version = "0.1.0"
edition = "2021"
authors = ["Ranjan Mohanty <ranjan@duck.com>"]
description = "AI-powered log analyzer - Elementary, my dear developer"
license = "MIT"
repository = "https://github.com/ranjan-mohanty/sherlog"
keywords = ["logs", "debugging", "cli", "ai", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.12"
